tests/golden/prometheus/argocd/argocd/30_argocd/20_networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  annotations: {}
  labels:
    name: argocd-allow-same-namespace
  name: argocd-allow-same-namespace
  namespace: syn
spec:
  ingress:
    - from:
        - podSelector: {}
  podSelector: {}
  policyTypes:
    - Ingress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  annotations: {}
  labels:
    name: argocd-allow-operator
  name: argocd-allow-operator
  namespace: syn
spec:
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: syn-argocd-operator
  podSelector: {}
  policyTypes:
    - Ingress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  annotations: {}
  labels:
    name: allow-from-prometheus-infra
  name: allow-from-prometheus-infra
  namespace: syn
spec:
  egress: []
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: prom-namespace
  podSelector: {}
  policyTypes:
    - Ingress
